--- a/TextTransfer/Base.lproj/Main.storyboard
+++ b/TextTransfer/Base.lproj/Main.storyboard
@@ -81,12 +81,37 @@
                                     <action selector="viewFileContent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rFw-Bm-aVB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDF-g0-WSk">
+                                <rect key="frame" x="219" y="468" width="62" height="30"/>
+                                <animations/>
+                                <state key="normal" title="listoffiles"/>
+                                <connections>
+                                    <action selector="listiffiles:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vqR-Bq-aYF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jgU-Sq-ZWs">
+                                <rect key="frame" x="370" y="468" width="34" height="30"/>
+                                <animations/>
+                                <state key="normal" title="write"/>
+                                <connections>
+                                    <action selector="write:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oZ7-hk-yrL"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="text" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KKG-3V-cgK">
+                                <rect key="frame" x="47" y="204" width="97" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="textedit" destination="KKG-3V-cgK" id="nNx-Yk-uNP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
